# cdf-s3-replicator

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAKEHOUSE_TO_KQL.md  README.md  config-petro-tech.yaml  example_az_deploy.py  example_config.yaml  manifest.yml  mypy.ini  pyproject.toml  remote_config_example.yaml  s3_connector.spec  win_service.spec
.github/: settings.yml
.github/workflows/: build.yml  codestyle.yml  integration_tests.yml  pr.yaml  release.yml  security.yaml  test.yaml
cdf-s3-replicator-chart/: Chart.yaml  values.yaml
cdf-s3-replicator-chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
cdf_fabric_replicator/: __main__.py  config.py  data_modeling.md  data_modeling.py  extractor_config.md  extractor_config.py
cdf_s3_replicator/: __main__.py  config.py  data_modeling.py  event.py  extractor.py  extractor_config.py  metrics.py  raw.py  subscription.py  time_series.py  winservice.py
config_examples/: build_examples.sh  example_config.yaml
infra/: package-lock.json  package.json
infra/application/: Plumi.dev.yaml  Plumi.yaml  app-startup-script.sh  cdf-s3-replicator.service  deploy.sh  index.ts  run-app-container.sh
infra/platform/application-assets/: Pulumi.dev.yaml  Pulumi.yaml  deploy.sh  index.ts
infra/platform/secrets/: Pulumi.dev.yaml  Pulumi.yaml  deploy.sh  index.ts
installer/: setup-config.json
schema/: config.schema.json  data_modeling_config.schema.json  destination_config.schema.json  extractor_config.schema.json  raw_tables_config.schema.json  source_config.schema.json
tests/integration/: conftest.py  test_config.yaml  test_data_model_replicator.py  test_events_replicator.py  test_fabric_extractor.py  test_helm.py  test_timeseries_replicator.py
tests/integration/integration_steps/: cdf_steps.py  s3_steps.py  service_steps.py
tests/unit/: conftest.py  test_data_modeling.py  test_event.py  test_extractor.py  test_raw.py  test_s3_operations.py  test_time_series.py
